APIs/azure.com/servicefabric/6.0.0.1/python-client/docs/HealthInformation.md
# HealthInformation

Represents common health report information. It is included in all health reports sent to health store and in all health events returned by health queries. 

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**description** | **str** | The description of the health information. It represents free text used to add human readable information about the report. The maximum string length for the description is 4096 characters. If the provided string is longer, it will be automatically truncated. When truncated, the last characters of the description contain a marker \&quot;[Truncated]\&quot;, and total string size is 4096 characters. The presence of the marker indicates to users that truncation occurred. Note that when truncated, the description has less than 4096 characters from the original string.  | [optional] 
**health_state** | [**HealthState**](HealthState.md) |  | 
**var_property** | **str** | The property of the health information. An entity can have health reports for different properties. The property is a string and not a fixed enumeration to allow the reporter flexibility to categorize the state condition that triggers the report. For example, a reporter with SourceId \&quot;LocalWatchdog\&quot; can monitor the state of the available disk on a node, so it can report \&quot;AvailableDisk\&quot; property on that node. The same reporter can monitor the node connectivity, so it can report a property \&quot;Connectivity\&quot; on the same node. In the health store, these reports are treated as separate health events for the specified node.  Together with the SourceId, the property uniquely identifies the health information.  | 
**remove_when_expired** | **bool** | Value that indicates whether the report is removed from health store when it expires. If set to true, the report is remopved from the health store after it expires. If set to false, the report is treated as an error when expired. The value of this property is false by default. When clients report periodically, they should set RemoveWhenExpired false (default). This way, is the reporter has issues (eg. deadlock) and can&#39;t report, the entity is evaluated at error when the health report expires. This flags the entity as being in Error health state.  | [optional] 
**sequence_number** | **str** | The sequence number for this health report as a numeric string. The report sequence number is used by the health store to detect stale reports. If not specified, a sequence number is auto-generated by the health client when a report is added.  | [optional] 
**source_id** | **str** | The source name which identifies the client/watchdog/system component which generated the health information.  | 
**time_to_live_in_milli_seconds** | **str** | The duration for which this health report is valid. This field is using ISO8601 format for specifying the duration. When clients report periodically, they should send reports with higher frequency than time to live. If clients report on transition, they can set the time to live to infinite. When time to live expires, the health event that contains the health information is either removed from health store, if RemoveWhenExpired is true, or evaluated at error, if RemoveWhenExpired false.  If not specified, time to live defaults to infinite value.  | [optional] 

## Example

```python
from openapi_client.models.health_information import HealthInformation

# TODO update the JSON string below
json = "{}"
# create an instance of HealthInformation from a JSON string
health_information_instance = HealthInformation.from_json(json)
# print the JSON string representation of the object
print(HealthInformation.to_json())

# convert the object into a dict
health_information_dict = health_information_instance.to_dict()
# create an instance of HealthInformation from a dict
health_information_from_dict = HealthInformation.from_dict(health_information_dict)
```
[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


